# ThreadPoolWS

./: CMakeLists.txt  README.md
include/concurrency/: IConcurrencyModel.h  ThreadPoolConcurrency.h
include/network/: BasicHttpHandler.h  IHttpHandler.h  INetworkService.h  SocketNetworkService.h
include/server/: IServer.h  Server.h  ServerConfig.h
src/: main.cpp
src/concurrency/: ThreadPoolConcurrency.cpp
src/network/: BasicHttpHandler.cpp  SocketNetworkService.cpp
src/server/: Server.cpp  ServerConfig.cpp
